[package]
name = "solana-agg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "2.0.2"
tokio = "1.38.0"
futures-util = "0.3.30"
solana-sdk = "2.0.2"
solana-transaction-status = "2.0.2"
bs58 = "0.5.1"
solana-program = "2.0.2"
rocksdb = "0.22.0"
parity-scale-codec = { version = "3.6", features = ["derive"] }
borsh = "1.5.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.102"
structopt = { version = "0.3" }
log = "0.4.22"
actix-web = "4.8.0"
actix-service = "2.0.2"
actix-http = "3.8.0"

